--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,97 @@
-Flask==2.3.2
-Flask-SQLAlchemy==3.0.5
-Flask-Login==0.6.2
-Flask-WTF==1.1.1
-Flask-Migrate==4.0.4
-Flask-Mail==0.9.1
-Flask-WTF==1.1.1
-WTForms==3.0.1
-Werkzeug==2.3.6
+alembic==1.13.3
+altgraph==0.17.4
+auto-py-to-exe==2.44.2
+basicauth==1.0.0
+bcrypt==4.2.1
+beautifulsoup4==4.12.3
+bidict==0.23.1
+blinker==1.9.0
+bottle==0.13.2
+bottle-websocket==0.2.9
+certifi==2024.8.30
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.0
+click==8.1.7
+clr-loader==0.2.6
+colorama==0.4.6
+cryptography==3.4.8
+cryptograpy==0.0.0
+dnspython==2.7.0
+dominate==2.9.1
+Eel==0.17.0
+email_validator==2.2.0
+et_xmlfile==2.0.0
+eventlet==0.38.0
+expresspay-python-sdk==1.0.0
+ffmpeg==1.4
+Flask==3.1.0
+Flask-Bcrypt==1.0.1
+Flask-Bootstrap==3.3.7.1
+Flask-Login==0.6.3
+Flask-Mail==0.10.0
+Flask-Migrate==4.0.7
+Flask-Share==0.1.1
+Flask-SocketIO==5.4.1
+Flask-SQLAlchemy==3.1.1
+Flask-Uploads==0.2.1
+Flask-WTF==1.2.2
 fpdf==1.7.2
-python-docx==0.8.11
-reportlab==3.6.14
-openpyxl==3.1.2
-pandas==2.0.3
-cryptography==41.0.3
-webview==0.12.1
-reportlab
+future==1.0.0
+gevent==24.10.3
+gevent-websocket==0.10.1
+greenlet==3.1.1
+gTTS==2.5.4
+gunicorn==23.0.0
+h11==0.14.0
+idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.0.0
+Jinja2==3.1.4
+keyboard==0.13.5
+lxml==5.3.0
+Mako==1.3.6
+MarkupSafe==3.0.2
+numpy==2.0.2
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.3
+pathlib==1.0.1
+pefile==2023.2.7
+pillow==11.0.0
+plyer==2.1.0
+proxy_tools==0.1.0
+pycparser==2.22
+pydroid==0.1.4
+pydub==0.25.1
+pyinstaller==6.11.0
+pyinstaller-hooks-contrib==2024.9
+pyparsing==3.2.0
+pystray==0.19.5
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-engineio==4.10.1
+python-socketio==5.11.4
+pythonnet==3.0.4
+pytz==2024.2
+pywebview==5.3.2
+pywin32-ctypes==0.2.3
+qrcode==8.0
+reportlab==4.2.5
+requests==2.32.3
+simple-websocket==1.1.0
+six==1.16.0
+soupsieve==2.6
+SpeechRecognition==3.12.0
+SQLAlchemy==2.0.36
+typing_extensions==4.12.2
+tzdata==2024.2
+urllib3==2.2.3
+visitor==0.1.3
+Werkzeug==3.1.0
+whichcraft==0.6.1
+wsproto==1.2.0
+WTForms==3.2.1
+zipp==3.20.2
+zope.event==5.0
+zope.interface==7.1.1
